feat: Support send code with email. (#15)
